@@ -1,3 +1,11 @@
+2003-02-11  Bart Veer  <bartv@ecoscentric.com>
+
+	* ecosconfig.cxx:
+	With tcl 8.4 on a windows platform it is now necessary to call
+	Tcl_FindExecutable(). Otherwise Tcl does not get properly
+	initialized, and can end up indirecting through a NULL function
+	pointer.
+
 2002-02-05  Bart Veer  <bartv@redhat.com>
 
 	* cdl_exec.cxx, cdl_exec.hxx, ecosconfig.cxx:
